test/unique/neg/capture-lhs-not-unique.check
capture-lhs-not-unique.scala:8: error: first argument of capture must be unique
    capture(y, x)
           ^
one error found
